force-app/main/default/objects/Reservation__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>