force-app/main/default/objects/Reservation__c/fields/Book_Title__c.field-meta.xml
<CustomField>
    <fullName>Book_Title__c</fullName>
    <description>Related Book Name</description>
    <label>Book Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>