force-app/main/default/objects/Reservation__c/fields/Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Date__c</fullName>
    <description>Notification date when the email is sent to the customer that book is available</description>
    <label>Notification Date</label>
    <type>Date</type>
</CustomField>