force-app/main/default/objects/Reservation__c/validationRules/Reserve_only_not_Available_Book.validationRule-meta.xml
<ValidationRule>
    <fullName>Reserve_only_not_Available_Book</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
      ISPICKVAL(Book__r.Availability_Status__c,&apos;Available&apos;), 
      ISPICKVAL(  Status__c , &apos;Active&apos;)
)</errorConditionFormula>
    <errorDisplayField>Book__c</errorDisplayField>
    <errorMessage>This book is Currently available and Does not require reservation.</errorMessage>
</ValidationRule>