force-app/main/default/objects/Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>Book__c</columns>
    <columns>Book_Title__c</columns>
    <columns>Reservation_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Notification_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>