force-app/main/default/objects/Reservation__c/listViews/My_Reservations.listView-meta.xml
<ListView>
    <fullName>My_Reservations</fullName>
    <columns>NAME</columns>
    <columns>Book__c</columns>
    <columns>Member__c</columns>
    <columns>Status__c</columns>
    <columns>Reservation_Date__c</columns>
    <columns>Notification_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Reservations</label>
</ListView>